--- a/SpotiftClone/SpotiftClone.csproj
+++ b/SpotiftClone/SpotiftClone.csproj
@@ -15,6 +15,23 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>C:\Users\90536\Desktop\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +51,18 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>E63B142108C0072896C2FB514400AAD942E15CE5</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>SpotiftClone_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -164,6 +193,12 @@
     </Compile>
     <Compile Include="Admin\islemler\silmeFormlar\sarkiFormSilme.Designer.cs">
       <DependentUpon>sarkiFormSilme.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\islemler\VeritabaniForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\islemler\VeritabaniForm.Designer.cs">
+      <DependentUpon>VeritabaniForm.cs</DependentUpon>
     </Compile>
     <Compile Include="albums.cs">
       <DependentUpon>spotifyDB.tt</DependentUpon>
@@ -311,6 +346,9 @@
     <EmbeddedResource Include="Admin\islemler\silmeFormlar\sarkiFormSilme.resx">
       <DependentUpon>sarkiFormSilme.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Admin\islemler\VeritabaniForm.resx">
+      <DependentUpon>VeritabaniForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForms\AnasayfaForm.resx">
       <DependentUpon>AnasayfaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -369,6 +407,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>spotifyDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="SpotiftClone_TemporaryKey.pfx" />
     <None Include="spotifyDB.edmx.diagram">
       <DependentUpon>spotifyDB.edmx</DependentUpon>
     </None>
@@ -396,6 +435,18 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
